worked on about page responsivity and fixed overflow issue on all pages

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -19,7 +19,7 @@
   );
 }
 
-#about_me > h1 {
+#about_me h1 {
   text-align: center;
   font-size: 4rem;
   font-family: "Borel", cursive;
@@ -61,7 +61,7 @@
   color: var(--about-text);
   padding: 0.8rem;
   border-radius: 0.4rem;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
 }
 
@@ -70,32 +70,112 @@
 }
 
 @media screen and (max-width: 1024px) {
+  #about_me {
+    margin-left: -1rem;
+    padding-bottom: 35rem;
+  }
+
+  #about_me h1 {
+    margin-bottom: -1rem;
+  }
+
   .about_me_container {
     grid-template-columns: 1fr;
     gap: 0;
   }
 
   .about_me {
-    width: 50%;
-    margin: 2rem auto 4rem;
+    width: 80%;
+  }
+
+  .about_me_image {
+    height: 50rem;
   }
 
   .about_me_content {
     text-align: center;
+    width: 100%;
   }
 
   .about_me_content p {
-    margin: 1rem 0 1.5rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    text-align: center;
+  }
+
+  .about_btn {
+    background-color: var(--about-btn);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #about_me {
+    margin-left: -1rem;
+    padding-bottom: 10rem;
+  }
+
+  .about_me_image {
+    height: 40rem;
+  }
+
+  .about_btn {
+    background-color: var(--about-btn);
   }
 }
 
 @media screen and (max-width: 600px) {
+  #about_me {
+    margin-left: -1rem;
+    padding-bottom: 40rem;
+  }
+
+  .about_me_container {
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+
   .about_me {
-    width: 65%;
-    margin: 0 auto 3rem;
+    width: 80%;
+  }
+
+  .about_me_image {
+    height: 40rem;
+  }
+
+  .about_me_content {
+    text-align: center;
+    width: 100%;
   }
 
   .about_me_content p {
-    margin: 1.5rem 0;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  #about_me {
+    margin-left: -1rem;
+    padding-bottom: 35rem;
+  }
+
+  #about_me h1 {
+    font-size: 3rem;
+  }
+
+  .about_me_image {
+    height: 30rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  #about_me {
+    margin-left: -1rem;
+    padding-bottom: 45rem;
+  }
+
+  .about_me_image {
+    height: 25rem;
   }
 }
