--- a/src/main.css
+++ b/src/main.css
@@ -1,1 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Borel&family=Kalam&family=Lobster&family=Preahvihear&family=Rubik:wght@300;400;500&display=swap');
+
+html {
+    overflow-x: hidden;
+}
